...

  String _getTTSEngineName() {
    if (!widget.ttsInitialized) return 'Loading...';

    switch (widget.currentEngine) {
      case TTSEngineType.edge:
        return 'Edge TTS';
      case TTSEngineType.flutter:
        return 'Flutter TTS';
      case null:
        return 'TTS N/A';
    }
  }

  IconData _getTTSEngineIcon() {
...
